update api but still poling
